crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_provide_equals.snap
---
source: crates/alder-parse/src/statement.rs
description: "provide Db { }"
---
Provide(
    Equals(
        1,
        12,
    ),
    1,
    1,
)
