crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_provide_name.snap
---
source: crates/alder-parse/src/statement.rs
description: "provide db = x { }"
---
Provide(
    Name(
        1,
        9,
    ),
    1,
    1,
)
