crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_provide_value.snap
---
source: crates/alder-parse/src/statement.rs
description: "provide Db = ) { }"
---
Provide(
    Value(
        Start(
            1,
            14,
        ),
        1,
        14,
    ),
    1,
    1,
)
