crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_return_value.snap
---
source: crates/alder-parse/src/statement.rs
description: return )
---
Return(
    Start(
        1,
        8,
    ),
    1,
    8,
)
