crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_same_line.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ let x = 1 2 }"
---
SameLine(
    1,
    13,
)
