crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_semicolon.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ let x = 1; }"
---
Stmt(
    Semicolon(
        1,
        12,
    ),
    1,
    12,
)
