crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_stmt_start.snap
---
source: crates/alder-parse/src/statement.rs
description: )
---
Expr(
    Start(
        1,
        1,
    ),
    1,
    1,
)
