crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_use_access.snap
---
source: crates/alder-parse/src/statement.rs
description: use Db.insert(u)
---
Use(
    1,
    7,
)
