crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_use_access_in_block.snap
---
source: crates/alder-parse/src/statement.rs
description: "{ use Db.insert(u) }"
---
Stmt(
    UseMember(
        1,
        9,
    ),
    1,
    3,
)
