crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_use_lower_member.snap
---
source: crates/alder-parse/src/statement.rs
description: "use Db::x"
---
UseMember(
    1,
    7,
)
