crates/alder-parse/src/snapshots/alder_parse__statement__tests__error_use_path_member.snap
---
source: crates/alder-parse/src/statement.rs
description: "use App::Db::x"
---
UseMember(
    1,
    12,
)
